# discord-webhook-proxy

./: .dockerignore  .gitignore  Dockerfile  README.md  bot_manager.py  config.example.yaml  discord_listener.py  docker-compose.yml  pyproject.toml  webhook_forwarder.py
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
src/: config.py  listener_manager.py  main.py
